# nucleo-picker

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  USAGE.md
.github/workflows/: rust.yml
examples/: README.md  blocking.rs  custom_io.rs  find.rs  float.rs  fzf.rs  fzf_err_handling.rs  low_framerate.rs  multi.rs  multiline.rs  options.rs  poems.json  restart.rs  restart_ext.rs  serde.rs  unrenderable.rs
src/: bind.rs  component.rs  editable.rs  error.rs  event.rs  fill.rs  filter.rs  incremental.rs  injector.rs  lazy.rs  lib.rs  match_list.rs  observer.rs  prompt.rs  render.rs  term.rs  util.rs
src/component/: cursor.rs  editable.rs
src/event/: bind.rs
src/incremental/: partial.rs
src/match_list/: draw.rs  item.rs  layout.rs  span.rs  tests.rs  unicode.rs
src/match_list/layout/: reset.rs  resize.rs  selection.rs  update.rs
src/match_list/span/: tests.rs
src/prompt/: tests.rs
src/term/: editable.rs  item.rs  layout.rs  matcher.rs  span.rs  unicode.rs
src/term/item/: tests.rs
src/term/layout/: tests.rs
src/term/matcher/: resize.rs  selection.rs  tests.rs  update.rs
