[package]
authors = ["Alex Rutar <alex@rutar.org>"]
categories = ["command-line-interface"]
description = "A fuzzy picker tui library based on nucleo"
edition = "2021"
keywords = ["cli"]
license = "MIT OR Apache-2.0"
name = "nucleo-picker"
repository = "https://github.com/autobib/nucleo-picker"
version = "0.6.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
crossterm = { version = "0.28", features = ["use-dev-tty"] }
memchr = "2.7"
nucleo = "0.5"
unicode-segmentation = "1.10"
unicode-width = { version = "0.2", default-features = false }
serde = { version = "1.0", optional = true }

[dev-dependencies]
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.clippy]
redundant_closure_for_method_calls = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"

[[example]]
name = "find"

[[example]]
name = "blocking"

[[example]]
name = "serde"
required-features = ["serde"]

[[example]]
name = "fzf"

[[example]]
name = "options"
