[package]
authors = ["Alex Rutar <alex@rutar.org>"]
categories = ["command-line-interface"]
description = "A performant and Unicode-aware fuzzy picker tui library"
edition = "2021"
keywords = ["cli"]
license = "MIT OR Apache-2.0"
name = "nucleo-picker"
repository = "https://github.com/autobib/nucleo-picker"
version = "0.7.0-alpha.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
crossterm = { version = "0.28", features = ["use-dev-tty"] }
memchr = "2.7"
nucleo = "0.5"
unicode-segmentation = "1.10"
unicode-width = { version = "0.2", default-features = false }
serde = { version = "1.0", optional = true }

[dev-dependencies]
crossbeam = "0.8.4"
rand = "0.8.5"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.clippy]
redundant_closure_for_method_calls = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"

[[example]]
name = "custom_io"

[[example]]
name = "fzf_err_handling"

[[example]]
name = "find"

[[example]]
name = "restart"

[[example]]
name = "blocking"

[[example]]
name = "serde"
required-features = ["serde"]

[[example]]
name = "fzf"

[[example]]
name = "options"
