[package]
authors = ["Alex Rutar <alex@rutar.org>"]
categories = ["command-line-interface"]
description = "A performant and Unicode-aware fuzzy picker tui library"
edition = "2024"
keywords = ["cli"]
license = "MIT OR Apache-2.0"
name = "nucleo-picker"
repository = "https://github.com/autobib/nucleo-picker"
version = "0.11.0-beta"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
memchr = "2.7"
nucleo = { version = "0.1.2", package = "ncp-engine" }
parking_lot = "0.12.3"
serde = { version = "1.0", optional = true }
unicode-segmentation = "1.12.0"
unicode-width = { version = "0.2.2", default-features = false }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8.4"
rand = "0.9.2"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.clippy]
redundant_closure_for_method_calls = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
use_self = "warn"

[[example]]
name = "custom_io"

[[example]]
name = "fzf_err_handling"

[[example]]
name = "find"

[[example]]
name = "restart"

[[example]]
name = "restart_ext"

[[example]]
name = "blocking"

[[example]]
name = "multi"

[[example]]
name = "serde"
required-features = ["serde"]

[[example]]
name = "fzf"

[[example]]
name = "options"
